--- a/modules/quiz/client/views/quizTemplate.client.view.html
+++ b/modules/quiz/client/views/quizTemplate.client.view.html
@@ -1,5 +1,5 @@
 <div ui-view class = "margin-top-50" ng-controller = "QuizController">
-    <div class="header-space">
+    <div style="margin-top:100px;">
         <!-- Using this for space -->
     </div>
 	<div class = "container" >
