--- a/modules/core/client/views/resources.client.view.html
+++ b/modules/core/client/views/resources.client.view.html
@@ -1,5 +1,5 @@
 <div class="content" ng-controller="SubjectController">
-     <div class="header-space">
+     <div style="margin-top: 100px;">
         <!-- Using this for space -->
     </div>
     <div class="container">
