--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -5,9 +5,11 @@
 
 
 /*----header----*/
+
 body {
     font-family: AwesomeFont, Verdana, Geneva, sans-serif;
 }
+
 .navbar {
     height: 75px;
 }
@@ -20,6 +22,9 @@ body {
 .glyphicon-chevron-right {
     margin-left: 12px;
 }
+
+
+/* MAIN PAGE BUTTONS */
 
 .center-block.center-button {
     border: 2px solid #252525;
@@ -35,7 +40,7 @@ body {
 
 .center-block.center-button:hover {
     background: #252525;
-    color: white; 
+    color: white;
 }
 
 .navbar-brand {
@@ -223,4 +228,5 @@ body {
     padding-bottom: 30px;
     background: #252525;
     color: #B9B9B9;
+    font-family:
 }
