--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -26,14 +26,22 @@ body {
 
 /* MAIN PAGE BUTTONS */
 
+.hover-box {
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .center-block.center-button {
     border: 2px solid #252525;
     font-size: 24px;
-    margin-top: 25px;
+    margin-top: 12.5px;
+    margin-bottom: 12.5px;
     padding: 15px;
-    width: 60%;
+    width: 70%;
     cursor: pointer;
-    height: 30%;
     -webkit-transition: all .25s ease;
     -moz-transition: all .25s ease;
 }
