--- a/modules/quiz/client/views/quizTemplate.client.view.html
+++ b/modules/quiz/client/views/quizTemplate.client.view.html
@@ -22,7 +22,7 @@
 				</div>
 			</div>
 			<button class = "btn" ng-click="increment()" ng-hide = "isDone">Next</button>
-			<button class = "btn" ui-sref = "subject.quiz.quiz-results" ng-show = "isDone">Finish!</button>
+			<button class = "btn" ui-sref = "quiz.results" ng-show = "isDone">Finish!</button>
 	  	</div>
 	</div>
 </div>
