--- a/modules/core/client/views/profile.client.view.html
+++ b/modules/core/client/views/profile.client.view.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="col-lg-3 control-label">Company:</label>
+          <label class="col-lg-3 control-label">School:</label>
           <div class="col-lg-8">
             <input class="form-control" type="text" value="">
           </div>
@@ -79,19 +79,19 @@
         <div class="form-group">
           <label class="col-md-3 control-label">Username:</label>
           <div class="col-md-8">
-            <input class="form-control" type="text" value="{{user.username}}">
+            <input class="form-control" type="text" value="{{user.userName}}">
           </div>
         </div>
         <div class="form-group">
           <label class="col-md-3 control-label">Change Password:</label>
           <div class="col-md-8">
-            <input class="form-control" type="password" value="11111122333">
+            <input class="form-control" type="password" value="{{user.password}}">
           </div>
         </div>
         <div class="form-group">
           <label class="col-md-3 control-label">Confirm Password:</label>
           <div class="col-md-8">
-            <input class="form-control" type="password" value="11111122333">
+            <input class="form-control" type="password" value="{{user.password}}">
           </div>
         </div>
         <div class="form-group">
