--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,18 +1,57 @@
 <div class="margin-top-50 content-main" ng-controller="MainController">
-    <div top-images>
-        <!--insert carousel here...-->
-        <img src="modules/core/client/img/biotility_img/microcentrifuge.jpg" alt="" style="width: 100%; height: 100%;">
+    <div id="main-carousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <!-- Page indicator for first item -->
+    <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+    <!-- Page indicator for second item -->
+    <li data-target="#main-carousel" data-slide-to="1"></li>
+    <!-- Page indicator for third item -->
+    <li data-target="#main-carousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <!-- First Item -->
+    <div class="item active">
+      <img src="./modules/core/client/img/biotility_img/microcentrifuge.jpg" alt="...">
+      <div class="carousel-caption">
+        <h3 class="m"> Advanced <span style="color: #FD432F">biotechnology</span> education and training </h3>
+        <p class="mh">Preparation for the Biotechnician Assistant Credentialing Exam (BACE)</p>
+      </div>
     </div>
-    <div class="head">
-        <div class="m"> Advanced <span style="color: #FD432F">biotechnology</span> education and training </div>
-        <div class="mh">Preparation for the Biotechnician Assistant Credentialing Exam (BACE)</div>
+    <!-- Second Item -->
+    <div class="item">
+      <img src="./modules/core/client/img/biotility_img/microcentrifuge.jpg" alt="...">
+      <div class="carousel-caption">
+        <h3 class="m"> Advanced <span style="color: #FD432F">biotechnology</span> education and training </h3>
+        <p class="mh">Preparation for the Biotechnician Assistant Credentialing Exam (BACE)</p>
+      </div>
     </div>
+    <!-- Third Item -->
+    <div class="item">
+      <img src="./modules/core/client/img/biotility_img/microcentrifuge.jpg" alt="...">
+      <div class="carousel-caption">
+        <h3 class="m"> Advanced <span style="color: #FD432F">biotechnology</span> education and training </h3>
+        <p class="mh">Preparation for the Biotechnician Assistant Credentialing Exam (BACE)</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#main-carousel" ng-non-bindable role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#main-carousel" ng-non-bindable role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
     <div class="container-fluid subjects">
         <div class="margin-top-75">
             <div class="row">
-                <div class="head sh">
-                    Select a topic to begin:
-                </div>
                 <div class="col-xs-3" ng-repeat="subject in subjects track by $index" ng-click="onClicked(subject)">
                     <div class="thumbnail under">
                         <div ng-mouseenter="hover = true" ng-mouseleave="hover = false" ng-class="{hovereffect: hover}" class="overlay">
@@ -22,7 +61,7 @@
                             </div>
                         </div>
                         <img style="width: 100%;" ng-src="{{subject.img}}" alt="" class="img-responsive">
-                        <div class="head caption">
+                        <div class="caption">
                             {{subject.name}}
                         </div>
                     </div>
