--- a/modules/core/client/views/profile.client.view.html
+++ b/modules/core/client/views/profile.client.view.html
@@ -12,7 +12,8 @@
     <!-- left column -->
     <div class="col-md-3">
       <div class="text-center">
-        <img src="modules/core/client/img/user/carl.png" alt="" class="img-circle user-pic">        <h6>Upload a different photo...</h6>
+        <img ng-src="{{authentication.user.profileImageURL}}" alt="" class="img-circle user-pic">       
+        <h6>Upload a different photo...</h6>
 
         <input type="file" class="form-control">
 
@@ -27,11 +28,11 @@
 
     <!-- edit form column -->
     <div class="col-md-9 personal-info">
-      <div class="alert alert-info alert-dismissable">
+<!--       <div class="alert alert-info alert-dismissable">
         <a class="panel-close close" data-dismiss="alert">×</a>
         <i class="fa fa-coffee"></i>
         This is an <strong>.alert</strong>. Use this to show important messages to the user.
-      </div>
+      </div> -->
       <h3>Personal info</h3>
 
       <form class="form-horizontal" role="form">
@@ -85,13 +86,13 @@
         <div class="form-group">
           <label class="col-md-3 control-label">Change Password:</label>
           <div class="col-md-8">
-            <input class="form-control" type="password" value="{{user.password}}">
+            <input class="form-control" type="password" value="">
           </div>
         </div>
         <div class="form-group">
           <label class="col-md-3 control-label">Confirm Password:</label>
           <div class="col-md-8">
-            <input class="form-control" type="password" value="{{user.password}}">
+            <input class="form-control" type="password" value="">
           </div>
         </div>
         <div class="form-group">
