--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -42,10 +42,11 @@
     </script>
 
     <!-- jQuery for Bootstrap JS -->
-    <script src="/public/lib/jquery/dist/jquery.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     
     <!-- Bootstrap JS -->
-    <script src="/public/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous">
+    </script>
 
     <!--Load The Socket.io File-->
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
