--- a/modules/quiz/client/views/quizTest.client.view.html
+++ b/modules/quiz/client/views/quizTest.client.view.html
@@ -1,4 +1,4 @@
-<div ui-view class = "margin-top-50" ng-controller = "QuizCreate">
+<div ui-view class = "margin-top-50" ng-controller = "QuizCreate" ng-init = "getQuestion()">
     <div class="header-space">
         <!-- Using this for space -->
     </div>
@@ -6,8 +6,8 @@
     <br>
     <br>
 		<div class = "container" >
-			<h1> Here</h1>
-			<input type="file" on-read-csv = "showContent($fileContent)" />
+			<h1> Insert Quiz</h1>
+			<input type="file" on-read-csv = "uploadQuestions($fileContent)" />
 		    <div ng-if="content">
 		        <h2>File content is:</h2>
 		        <pre>{{ content }}</pre>
