--- a/modules/quiz/client/views/quizResults.client.view.html
+++ b/modules/quiz/client/views/quizResults.client.view.html
@@ -6,7 +6,7 @@
 			<br>
 			<h1> Yay you finished the section</h1>
 			<div id = "results" >
-				<h2> You got a {{score}} /10!</h2>
+				<h2> You got a {{score}} / {{totalNumQuestion}}!</h2>
 			</h2>
 		</div>
 </div>
