--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -2,7 +2,7 @@
     <!--<span class="navbar-brand" ng-repeat="crumb in breadcrumb track by $index" ng-click="click(crumb)">
         {{crumb.name}}<span ng-hide="$index === breadcrumb.length - 1" class="glyphicon glyphicon-chevron-right"></span>
     </span>-->
-    <div class=" nav-img pull-left">
+    <div class="nav-img pull-left">
         <a data-ui-sref="home"><img src="modules/core/client/img/brand/logo.png" alt="" style="width: 130px;"></a>
     </div>
     <div ng-show="authentication.user" class="navbar-brand pull-right" ng-click="logout()">
@@ -21,11 +21,11 @@
     </div>
     <!-- Contact -->
     <div class="navbar-brand pull-right">
-        Contact
+       <a data-ui-sref="contact">Contact</a>
     </div>
     <!-- About -->
     <div class="navbar-brand pull-right">
-        About Us
+       <a data-ui-sref="about">About Us</a>
     </div>
     <div class="navbar-brand pull-right">
         <a data-ui-sref="home">Home</a>
