about, contact, home, and resources updates

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -15,7 +15,7 @@ body {
 }
 
 .nav-img {
-    margin-top: 8px;
+    margin-top: 2px;
 }
 
 .navbar-brand >.nav-img {
@@ -190,7 +190,7 @@ body {
 }
 
 .caption {
-    font-size: 20px;
+    font-size: 14px;
 }
 
 .big-btn {
@@ -271,4 +271,37 @@ img.center {
 	display: block;
     margin-left: auto;
     margin-right: auto	
+}
+
+img.circle {
+    border-radius: 50%;	
+}
+
+img.bord {
+	border: solid;
+	border-color: #D4D4D4;
+	border-width: 4px;
+}
+
+.contact {
+	font-size: 25px;
+	margin-bottom: 20px;
+    color: #11023C;
+	text-align: center;
+}
+
+.contact-name {
+	font-size: 12px;
+    color: black;
+	text-align: center;
+}
+
+.bold {
+	font-weight: bold;	
+}
+
+img.resource {
+    float: right;
+    margin: 0 0 30px 30px;
+	border-radius: 5px;
 }
