--- a/modules/core/client/views/about.client.view.html
+++ b/modules/core/client/views/about.client.view.html
@@ -5,7 +5,7 @@
         	<div class="col-md-2 col-md-offset-1 page-head">
             	About
             </div>
-            <div class="col-md-3 col-md-offset-9 b-head">
+            <div class="col-md-8 b-head">
             	<a data-ui-sref="home">Home</a> / About
             </div>
     	</div>
