--- a/modules/core/client/views/contact.client.view.html
+++ b/modules/core/client/views/contact.client.view.html
@@ -5,14 +5,50 @@
         	<div class="col-md-2 col-md-offset-1 page-head">
             	Contact
             </div>
-            <div class="col-md-3 col-md-offset-9 b-head">
+            <div class="col-md-8 b-head">
             	<a data-ui-sref="home">Home</a> / Contact
             </div>
     	</div>
     </div>
     
+    <div class="container head contact" style="margin-bottom: 40px;">
+    	Our Team
+    </div>
+    
+    <div class="container row">
+    	<div class="col-md-3 col-md-offset-1">
+        	<img class="center circle bord" src="modules/core/client/img/sci.jpg" style="width: 80%;">
+            <br>
+            <p class="head contact-name bold"> Lori Wojciechowski </p>
+            <p class="head contact-name"> Coordinator, Education and Training</p>
+            <p class="head contact-name"><a href="mailto:lwojo@ufl.edu">lwojo@ufl.edu</a> | 386.462.3181</p>
+            
+        </div>
+        <div class="col-md-8 head con">
+        	<div style="padding-top: 40px;">
+        	Lori Wojciechowski is the Coordinator of Education and training at Biotility at the University of Florida’s Center of Excellence for Regenerative Health Biotechnology. After completing a BS in Bacteriology from the University of Wisconsin, she moved to Gainesville for graduate school. Lori has an extensive background in academic research with an emphasis on bacterial pathogenicity and antibiotic production. She recently completed her law degree (with a specialty in Intellectual Property law) at the Levin College of Law at the University of Florida.  Lori’s legal background has given her an understanding of FDA regulatory requirements and expectations for drug and biologic development and marketing approval, as well as current Good Manufacturing Practices (cGMPs).
+            </div>
+        </div> <!--column-->
+    </div><!--row-->
    	
         
+    <div class="container row" style="margin-top: 50px;">
+    	<div class="col-md-3 col-md-offset-1">
+        	<img class="center circle bord" src="modules/core/client/img/sci.jpg" style="width: 80%;">
+            <br>
+            <p class="head contact-name bold"> Tamara Mandell </p>
+            <p class="head contact-name"> Assistant Director, Education and Training</p>
+            <p class="head contact-name"><a href="mailto:tmandell@cerhb.ufl.edu">tmandell@cerhb.ufl.edu</a> | 386.462.6397</p>
+            
+    </div>
+        <div class="col-md-8 head con">
+        	<div style="padding-top: 40px;">
+        	Tamara Mandell is the Assistant Director for the Education and Training Programs at the University of Florida’s Center of Excellence for Regenerative Health Biotechnology. Tamara received her BSE in Biology from the University of Kansas, and her M.Ed. in Curriculum and Instruction, with a focus on Biotechnology, from the University of Florida. She has over twelve years of combined academic research and industrial biotechnology experience, primarily in the fields of molecular biology, biochemistry, and gene therapy, and over six years experience in the development and delivery of biotechnology-based training. Tammy is fluent in the techniques and applications of methodologies in both academic research and applied science, including the use and development of assays, as well as the processes and quality systems utilized in the manufacture of cGMP compliant biopharmaceuticals.
+            </div>
+        </div> <!--column-->
+    </div><!--row-->
         
 
 <div class="text-center footer" style="margin-top: 100px;">&copy; Biotility, 2015.</div>
+
+</div>
