--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -22,17 +22,17 @@
     </div>
     <!-- Second Item -->
     <div class="item">
-      <img src="./modules/core/client/img/biotility_img/microcentrifuge.jpg" alt="...">
+      <img src="./modules/core/client/img/biotility_img/gown.jpg" alt="...">
       <div class="carousel-caption">
-        <h3 class="m"> Advanced <span style="color: #FD432F">biotechnology</span> education and training </h3>
+        <h3 class="m"> Sample Slide 2 </h3>
         <p class="mh">Preparation for the Biotechnician Assistant Credentialing Exam (BACE)</p>
       </div>
     </div>
     <!-- Third Item -->
     <div class="item">
-      <img src="./modules/core/client/img/biotility_img/microcentrifuge.jpg" alt="...">
+      <img src="./modules/core/client/img/biotility_img/vats.jpg" alt="...">
       <div class="carousel-caption">
-        <h3 class="m"> Advanced <span style="color: #FD432F">biotechnology</span> education and training </h3>
+        <h3 class="m"> Sample slide 3 </h3>
         <p class="mh">Preparation for the Biotechnician Assistant Credentialing Exam (BACE)</p>
       </div>
     </div>
@@ -56,8 +56,9 @@
                     <div class="thumbnail under">
                         <div ng-mouseenter="hover = true" ng-mouseleave="hover = false" ng-class="{hovereffect: hover}" class="overlay">
                             <div class="hover-box">
+                            	<div class="center-block center-button" ng-click="gotoResource(subject)">Resources</div>
                                 <div class="center-block center-button" ng-click="gotoQuiz(subject)">Assessment</div>
-                                <div class="center-block center-button" ng-click="gotoResource(subject)">Resources</div>
+                                
                             </div>
                         </div>
                         <img style="width: 100%;" ng-src="{{subject.img}}" alt="" class="img-responsive">
