--- a/modules/core/client/views/resources.client.view.html
+++ b/modules/core/client/views/resources.client.view.html
@@ -1,20 +1,56 @@
-<div class="content" ng-controller="SubjectController">
-    <div style="margin-top: 100px;">
-        <!-- Using this for space -->
+<div ng-controller="MainController">
+
+	<div class="breadcrumbh" id="breadcrumbh">
+    	<div class="row topmargin-b">
+        	<div class="col-md-2 col-md-offset-1 page-head">
+            	Resources
+            </div>
+            <div class="col-md-8 b-head">
+            	<a data-ui-sref="home">Home</a> / Subject / Resources
+            </div>
+    	</div>
     </div>
-    <div class="container">
-        <div class="jumbotron text-center">
-            <!--change this to show the subject name-->
-            <h1>{{subject}}</h1>
-            <h2>Resources</h2>
-        </div>
-        <div>
-            <h3 class="text-center">Summary</h3> 
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        </div>
-        <h5>Links:</h5>
-        <ul>
-            google.com
-        </ul>
+   
+    
+    <div class="container head about-sub">
+    	Overview
     </div>
+    <div class="container head con">
+    
+    <img class="center resource bord" src="modules/core/client/img/biotility_img/resources_test.jpg" alt="" style="width: 500px;">
+    
+    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tincidunt libero ac tortor mattis, sit amet scelerisque nibh sollicitudin. Maecenas rutrum enim lorem. Suspendisse a tortor eu massa congue hendrerit ac elementum metus. Sed interdum, tortor nec imperdiet aliquet, velit nisl rhoncus eros, id ultrices dui purus at risus. Curabitur ligula nisl, euismod non facilisis eget, rhoncus vitae dui. Phasellus faucibus nibh vitae placerat tincidunt. Morbi pulvinar et mauris eu luctus.<br><br>
+
+Proin vitae mi vel neque fermentum porttitor quis ut tortor. Maecenas maximus tellus sit amet arcu iaculis gravida. Donec dignissim congue eleifend. Nulla porttitor turpis vitae iaculis congue. Vestibulum porta diam in facilisis ultrices. Quisque pellentesque, enim id faucibus fermentum, neque diam luctus purus, at maximus nisi urna eu mauris. Morbi vulputate, dui nec viverra pharetra, nulla dui egestas odio, sit amet tempus velit velit in ante. Donec dictum, magna malesuada luctus euismod, felis ante tempus libero, at ullamcorper ipsum est imperdiet magna. Proin ac dui a urna malesuada varius vel vel metus. Nam luctus est at ullamcorper aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam tortor odio, auctor ut iaculis at, gravida ac odio.<br><br>
+
+Pellentesque egestas libero ac eros tempus, a malesuada nunc malesuada. Donec placerat enim in arcu congue eleifend. Nam ut malesuada nulla. Donec mollis convallis neque, sed dictum ligula dignissim at. Aenean interdum nec orci ut ultricies. Morbi tincidunt tellus quis finibus vulputate. Fusce in accumsan justo.<br><br>
+
+Vivamus eu metus quis eros cursus efficitur non non mauris. Fusce pretium nunc sit amet mi sollicitudin maximus. Sed pretium malesuada tellus, a placerat est euismod ut. Donec efficitur, lectus vitae sodales congue, ex lacus finibus massa, a venenatis urna nunc a est. In feugiat ante elit, venenatis auctor dolor gravida id. Sed volutpat orci eu ante blandit, eget egestas lectus elementum. Phasellus feugiat lacinia enim, quis tristique nibh mollis ac. Sed finibus sit amet nibh sollicitudin aliquet. Integer a quam enim. Fusce id maximus purus. Morbi vehicula libero in lectus maximus, a rhoncus ligula sagittis. Aenean quis orci nisl. Praesent non eros a ligula suscipit sollicitudin non in felis. Etiam tincidunt nibh eu tristique porttitor.<br><br>
+
+Ut arcu purus, hendrerit a sollicitudin vitae, consequat ac turpis. Maecenas id risus facilisis, vestibulum augue vel, tincidunt lectus. Donec vitae lobortis enim, vitae eleifend diam. Fusce vitae consectetur nulla. Fusce hendrerit mattis lacus in viverra. Proin pretium, leo aliquam faucibus mattis, purus velit dignissim sapien, nec tincidunt magna magna vel augue. Phasellus at ultrices nisi, vitae mattis orci. Aenean pretium quam turpis, id gravida nisi congue ac. Duis tempor, urna in sodales consectetur, erat justo viverra eros, sit amet volutpat nulla lorem eu tortor. Fusce id erat quis mauris rutrum suscipit. Suspendisse commodo in justo ut ultrices. Integer pretium pharetra ex, ut lobortis dolor ornare et. Sed ut neque blandit, convallis augue nec, tincidunt nisl. Nulla blandit justo at nulla malesuada elementum.<br>
+    </div>
+    
+    <div class="container head about-ssub" style="margin-top: 40px;">
+    	Learn More
+    </div>
+    
+    <div class="container head con" style="padding-left: 50px">
+    	<a href="http://ghr.nlm.nih.gov/handbook/basics/cell">What is a Cell?</a>
+        <br><br>
+        <a href="http://ghr.nlm.nih.gov/handbook/basics/cell">What is Genetics?</a>
+        <br><br>
+        <a href="http://ghr.nlm.nih.gov/handbook/basics/cell">What is a Biochemistry?</a>
+        <br><br>
+    </div>
+    
+    <div class="container" align="center">
+         <a class="btn btn-default about-ssub" href="http://google.com">
+      	Go to Quiz!
+     </a>
+     </div>
+    
+
+<div class="text-center footer" style="margin-top: 100px;">&copy; Biotility, 2015.</div>
+
 </div>
+    
