--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -5,7 +5,7 @@
         	<div class="col-md-2 col-md-offset-1 page-head">
             	Sign-up
             </div>
-            <div class="col-md-3 col-md-offset-9 b-head">
+            <div class="col-md-8 b-head">
             	<a data-ui-sref="home">Home</a> / <a data-ui-sref="authentication.signin">Login</a> / Sign-Up
             </div>
     	</div>
@@ -63,9 +63,9 @@
                     <select ng-model="toAdd" style="height: 30px;">
                         <option ng-repeat="name in classNames track by $index">{{name}}</option>
                     </select>
-                    <button type="button" class="btn btn-default" ng-click="add(toAdd)">
-                        +
-                    </button>
+                    	<button type="button" class="btn btn-default" ng-click="add(toAdd)">
+                        	+
+                   		</button>
                 </div>
             </div>
             <div class="row">
