--- a/modules/users/client/css/users.css
+++ b/modules/users/client/css/users.css
@@ -46,7 +46,8 @@ overflow-x: hidden;
 	color: #E5E5E5;
 	font-size: 15px;
 	margin-bottom: 70px;
-	margin-top: -20px;
+	margin-top: 12px;
+	text-align: right;
 }
 
 .social-account-container {
@@ -115,7 +116,7 @@ select.my_dropdown {
 }
 
 .inputs{
-	margin-bottom:10px;	
+	margin-bottom:10px;
 }
 
 .accounts{
@@ -124,4 +125,8 @@ select.my_dropdown {
 
 .account-pick{
 	margin-left:-100px;
+}
+
+input {
+	border-radius: 4px;	
 }
