--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -1,17 +1,11 @@
-<head>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular.js"></script>
-    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js"></script>
-      <script src="authentication.client.controller.js"></script>
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
 
-</head>
 <div ng-controller="AuthenticationController">
     <div class="breadcrumbh" id="breadcrumbh">
     	<div class="row topmargin-b">
         	<div class="col-md-2 col-md-offset-1 page-head">
             	Login
             </div>
-            <div class="col-md-3 col-md-offset-9 b-head">
+            <div class="col-md-8 b-head">
             	<a data-ui-sref="home">Home</a> / Login
             </div>
     	</div>
@@ -22,9 +16,12 @@
     <form ng-submit="signin(true)">
         <div class="container topmargin-50">
             <div align="center">
+            	<div class="inputs">
                  <input type="text" ng-model="credentials.username" placeholder="Username" required style="height:40px;">
-                 <br>
+                 </div>
+                 <div class="inputs">
                  <input type="password" ng-model="credentials.password" placeholder="Password" required style="height:40px;">
+                 </div>
             </div>
         </div>
         <!-- log-in button -->
