--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,35 +1,37 @@
 <div id="navbar" ng-controller="HeaderController" class="container-fluid vertical-center bg-navbar">
-    <!--<span class="navbar-brand" ng-repeat="crumb in breadcrumb track by $index" ng-click="click(crumb)">
+  <!--<span class="navbar-brand" ng-repeat="crumb in breadcrumb track by $index" ng-click="click(crumb)">
         {{crumb.name}}<span ng-hide="$index === breadcrumb.length - 1" class="glyphicon glyphicon-chevron-right"></span>
     </span>-->
-    <div class="nav-img pull-left">
-        <a data-ui-sref="home"><img src="modules/core/client/img/brand/logo.png" alt="" style="width: 130px;"></a>
+  <div class="nav-img pull-left">
+    <a data-ui-sref="home">
+      <img src="modules/core/client/img/brand/logo.png" alt="" style="width: 130px;">
+    </a>
+  </div>
+  <div ng-show="authentication.user" class="navbar-brand pull-right" ng-click="logout()">
+    Logout
+  </div>
+  <!-- Profile -->
+  <div ng-show="authentication.user" class="navbar-brand pull-right" ng-click="profile()">
+    <div class="nav-img">
+      <img ng-src="{{authentication.user.profileImageURL}}" alt="" class="img-circle user-pic">
     </div>
-    <div ng-show="authentication.user" class="navbar-brand pull-right" ng-click="logout()">
-        Logout
-    </div>
-    <!-- Profile -->
-    <div ng-show="authentication.user" class="navbar-brand pull-right" ng-click="profile()">
-        <div class="nav-img">
-            <img ng-src="{{authentication.user.profileImageURL}}" alt="" class="img-circle user-pic">
-        </div>
-    </div>
-    <div ng-show="authentication.user" class="navbar-brand pull-right" ng-click="profile()">
-        {{authentication.user.displayName}}
-    </div>
-    <!-- Login -->
-    <div ng-hide="authentication.user" class="navbar-brand pull-right">
-        <a data-ui-sref="authentication.signin">Login</a>
-    </div>
-    <!-- Contact -->
-    <div class="navbar-brand pull-right">
-       <a data-ui-sref="contact">Contact</a>
-    </div>
-    <!-- About -->
-    <div class="navbar-brand pull-right">
-       <a data-ui-sref="about">About Us</a>
-    </div>
-    <div class="navbar-brand pull-right">
-        <a data-ui-sref="home">Home</a>
-    </div>
+  </div>
+  <div ng-show="authentication.user" class="navbar-brand pull-right" ng-click="profile()">
+    {{authentication.user.displayName}}
+  </div>
+  <!-- Login -->
+  <div ng-hide="authentication.user" class="navbar-brand pull-right">
+    <a data-ui-sref="authentication.signin">Login</a>
+  </div>
+  <!-- Contact -->
+  <div class="navbar-brand pull-right">
+    <a data-ui-sref="contact">Contact</a>
+  </div>
+  <!-- About -->
+  <div class="navbar-brand pull-right">
+    <a data-ui-sref="about">About Us</a>
+  </div>
+  <div class="navbar-brand pull-right">
+    <a data-ui-sref="home">Home</a>
+  </div>
 </div>
