--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -1,5 +1,5 @@
 <div ng-controller="AuthenticationController">
-    
+
     <div class="breadcrumbh" id="breadcrumbh">
     	<div class="row topmargin-b">
         	<div class="col-md-2 col-md-offset-1 page-head">
@@ -10,7 +10,7 @@
             </div>
     	</div>
     </div>
-    
+
     <form ng-submit="signup(true)">
    		 <div class="container topmargin-50" align="center">
          	<div class="inputs">
@@ -29,11 +29,11 @@
             <input type="password" ng-model="credentials.password" required placeholder="Password" required style="height:40px;">
             </div>
         </div>
-        
+
         <div class="row">
             <div class="col-md-2 col-md-offset-4 text-right">
                 <div class="accounts">
-                Account Type: 
+                Account Type:
                 </div>
             </div>
             <div class="radio col-md-2 account-pick">
@@ -49,7 +49,7 @@
         </div>
         <!-- if student -->
         <div ng-show="credentials.profileType=='Student'" class="inputs" align="center">
-                <input type="text" ng-model="credentials.courseCode" required placeholder="Class Code" required style="height:40px;">
+                <input type="text" ng-model="credentials.courseCode" placeholder="Class Code" style="height:40px;">
         </div>
         <!-- if teacher -->
         <div ng-show="credentials.profileType=='Teacher'">
