- Subjects now loaded from DB - User data view at /data/users

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -49,7 +49,8 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  
+
+  <!-- Subjects -->
   <div class="container-fluid subjects">
     <div class="margin-top-75">
       <div class="row">
@@ -62,7 +63,7 @@
                 <div class="center-block center-button" ng-click="gotoQuiz(subject)">Assessment</div>
               </div>
             </div>
-            <img style="width: 100%;" ng-src="{{subject.img}}" alt="" class="img-responsive">
+            <img style="width: 100%;" ng-src="{{subject.imgUrl}}" alt="" class="img-responsive">
             <div class="caption">
               {{subject.name}}
             </div>
