--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -2,6 +2,25 @@
   font-family: AwesomeFont;
   src: url(/modules/core/client/img/fonts/fontawesome-webfont.woff);
 }
+[ui-view].ng-enter, [ui-view].ng-leave {
+  position: absolute;
+  left: 0;
+  right: 0;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+[ui-view].ng-enter {
+  opacity: 0;
+}
+[ui-view].ng-enter-active {
+  opacity: 1;
+}
+[ui-view].ng-leave {
+  opacity: 1;
+}
+[ui-view].ng-leave-active {
+  opacity: 0;
+}
 
 /*----header----*/
 
@@ -25,8 +44,15 @@ body {
 .glyphicon-chevron-right {
   margin-left: 12px;
 }
+.carousel.slide {
+  box-shadow: 2px 2px 10px black;
+}
+.carousel-indicators>li {
+  box-shadow: 1px 1px 6px black;
+}
 
 /* MAIN PAGE BUTTONS */
+
 .hover-box {
   position: relative;
   height: 100%;
