Who needs spelling

--- a/modules/core/client/views/data.questions.client.view.html
+++ b/modules/core/client/views/data.questions.client.view.html
@@ -3,7 +3,7 @@
 </div>
 
 <div ng-controller="QuestionData">
-	<h2 class="text-center" style="font-size: 60px;">User Data</h2>
+	<h2 class="text-center" style="font-size: 60px;">Question Data</h2>
 	<table class="table table-striped">
 		<thead>
 			<th>Category</th>
