--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -1,6 +1,6 @@
 
 <div ng-controller="AuthenticationController">
-    <div class="breadcrumbh" id="breadcrumbh">
+    <div class="breadcrumbh">
     	<div class="row topmargin-b">
         	<div class="col-md-2 col-md-offset-1 page-head">
             	Login
@@ -10,8 +10,8 @@
             </div>
     	</div>
     </div>
-    
-    
+
+
     <!-- username and password entry -->
     <form ng-submit="signin(true)">
         <div class="container topmargin-50">
@@ -32,7 +32,7 @@
             <h3>Attempting to Log-in...</h3>
             </div>
 
-       
+
     </script>
             <button type="submit" ng-click="open()" class="btn btn-default">
                 Log-in
