--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -1,6 +1,6 @@
 <div ng-controller="AuthenticationController">
 
-    <div class="breadcrumbh" id="breadcrumbh">
+    <div class="breadcrumbh">
     	<div class="row topmargin-b">
         	<div class="col-md-2 col-md-offset-1 page-head">
             	Sign-up
