--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,4 +1,4 @@
-<div id="navbar" ng-controller="HeaderController" class="container-fluid vertical-center bg-navbar">
+<div id="navbar" ng-controller="HeaderController" class="navbar container-fluid vertical-center bg-navbar">
   <!--<span class="navbar-brand" ng-repeat="crumb in breadcrumb track by $index" ng-click="click(crumb)">
         {{crumb.name}}<span ng-hide="$index === breadcrumb.length - 1" class="glyphicon glyphicon-chevron-right"></span>
     </span>-->
